yamls/mtls/ingress/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-ingress-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-ingress-vs
spec:
  hosts:
  - "*"
  gateways:
  - spring-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /
    - uri:
        prefix: /logincheck
    - uri:
        prefix: /front
    - uri:
        prefix: /proj
    - uri:
        prefix: /todo
    - uri:
        prefix: /static
    - uri:
        prefix: /login
    - uri:
        prefix: /notice_list
    route:
    - destination:
        host: spring-main.istio.svc.cluster.local
        subset: v1
        port:
          number: 8000
---
