yamls/mtls/ingress/ingress_sec.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-ingress-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: spring-credential
      #serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      #privateKey: /etc/istio/ingressgateway-certs/tls.key
      #caCertificates: /etc/istio/ingressgateway-ca-certs/hhkim94.koreacentral.cloudapp.azure.com.crt
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-ingress-vs
spec:
  hosts:
  - "*"
  gateways:
  - spring-ingress-gateway
  http:
  - fault:
      delay:
        fixedDelay: 7s
        percentage:
          value: 0
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host:  spring-main
        subset: v2
        port:
          number: 8000
        weight: 0
    route:
    - destination:
        host: spring-main
        subset: v1
        port:
          number: 8000
        weight: 100
    timeout: 15s
---
